--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
 			<artifactId>org.eclipse.persistence.jpa</artifactId>
 			<version>2.6.2</version>
 		</dependency>
+		
+<!-- http://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itextpdf</artifactId>
+    <version>5.5.4</version>
+</dependency>
 	</dependencies>
 </project>
 
